--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
         }
     </style>
     <link rel="stylesheet" href="https://abs.twimg.com/a/1486005863/css/t1/twitter_core.bundle.css">
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-92185460-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 </head>
 <body>
 <div id="content">
@@ -211,14 +220,6 @@
             this.download = 'not-trump-tweet.png';
         });
     });
-
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-92185460-1', 'auto');
-    ga('send', 'pageview');
 </script>
 
 </body>
